2001-09-21  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/gnustep/base/DistributedObjects.h:
        * Source/GSFFCallInvocation.m:
        * Source/NSConnection.m:
        * Source/NSInvocation.m:
        * Source/callframe.h:
        * Source/callframe.m:
	Modifications to callframe handling to store pointers to data to
	be freed in order to be able to tidy up after an exception ...
	Appears to cure memory leak in ffcall code.
	No fix yest for mframe or ffi code.

2001-09-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Testing/nsconnection_client.m: Added simple exception tests
	* Testing/nsconnection_server.m: Added simple exception tests
	* Testing/server.h: Added simple exception tests

2001-09-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: rewrite ethod call code.
	* Source/callframe.h: ditto
	* Source/callframe.m: ditto
	* Source/cifframe.h: ditto
	* Source/cifframe.m: ditto
	* Source/mframe.m: ditto
	* Source/mframe/mframe.head: ditto
	* Headers/gnustep/base/DistributedObjects.h: Adde new DOContext struct.
	Rewrite code for moving data to/from method call stackframes and
	encoding/decoding it.  The functions to encode/decode each data item
	are no longer nested, and pass a context structure around which
	provides for more information to be passed between the various layers
	of the process so that the whole thing is thread-safe and we don't
	get cases where code in one place tries to work with an object that
	was released in another place.
	Tested pretty extensively for libffcall stuff, with the simple test
	programs for maframe, and not at all for libffi.

2001-09-19  Adam Fedor  <fedor@gnu.org>

	* configure.in: But CPPFLAGS in quotes

2001-09-14  Adam Fedor  <fedor@gnu.org>

	* configure.in: Remove redundancies in iconv checking. Remove
	redundant AC_SUBST(LIBS) lines.

2001-09-12  Adam Fedor  <fedor@gnu.org>

	* Source/thr-pthread.m (objc_yield): Replace pthread_yield with 
	sched_yield.
